--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 
                     <!-- Tipo de contato -->
                     <fieldset>
-                        <legend>CHow do you prefer our contact?</legend>
+                        <legend>How do you prefer our contact?</legend>
                         <label for="radio-email"><input type="radio" name="contact" value="email" id="radio-email">E-mail</label>
                         
                         <label for="radio-phone"><input type="radio" name="contact" value="phone" id="radio-phone">Phone</label>
